# VapourSynth-BM3DCUDA

hip_source/: CMakeLists.txt
